--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
+#mysql ˝æ›‘¥≈‰÷√
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#JPA≈‰÷√
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jackson.serialization.indent-output=true
 
-mybatis.mapper-locations=classpath*:mapping/*Mapper.xml
-mybatis.type-aliases-package=org.bill99.playdemo.entity
+#mybatis.mapper-locations=classpath*:mapping/*Mapper.xml
+#mybatis.type-aliases-package=org.bill99.playdemo.entity
